Made foreign changes and added endpoints to add data.
